--- a/03_gitIntro.html
+++ b/03_gitIntro.html
@@ -46,6 +46,14 @@
                 <td><pre>git commit -m "message"</pre></td>
                 <td>Clears the staging and provides the "why"</td>
             </tr>
+            <tr>
+                <td><pre>git push</pre></td>
+                <td>Uploads your local commits</td>
+            </tr>
+            <tr>
+                <td><pre>git pull</pre></td>
+                <td>Downloads changes from Github</td>
+            </tr>
         </tbody>
     </table>
 
