--- a/05_GridAndFlex/Upright_gridAndFlex_code-along_STUDENT/gridAndFlex.html
+++ b/05_GridAndFlex/Upright_gridAndFlex_code-along_STUDENT/gridAndFlex.html
@@ -20,7 +20,7 @@
             <caption>Buy Nuts!</caption>
         </div>
         <article id="grid-article">
-            <!-- add these notes with students -->
+            
             <span>Grid is a 2-Dimensional layout system. It can layout entire sites or smaller components. It allows for precise item placement within containers.</span>
             <br>
             <span>
@@ -41,30 +41,89 @@
         <div id="flex-container">
             <div class="card">
                 <h3>Accomplish</h3>
+                <p><b>Horizontal</b> or <b>Vertical</b> alignment of elements.</p>
+                <p>Arrangement of elements</p>
+                <p>Space distribution between & around elements.</p>
             </div>
+
             <div class="card">
                 <h3>Quick Notes</h3>
+                <p>It's one-dimensional. Either row or column, but not both at the same time.</p>
+                <p>Useful for layout on nav bars, headers, image galleries, cards, or the like.</p>
+                <p>Places layout with the <b>container</b>, not each item within it.</p>
+                <p>Only operate on <b>their</b> children.</p>
+                <p>Sets how a flex item with <b>shrink</b> or <b>grow</b> to fit the space of the container.</p>
             </div>
+
             <div class="card">
                 <h3>Flex Container</h3>
+                <p>Applies to the container <b>and</b> its children.</p>
+                <p>Must be defined in order to be applied.</p>
             </div>
+
             <div class="card">
                 <h3>Justify Content</h3>
+                <p>Simplifies positioning content on a horizontal plane.</p>
+                <ol>
+                    <li>flex-start</li>
+                    <li>flex-end</li>
+                    <li>center</li>
+                    <li>space-between</li>
+                    <li>space-around</li>
+                    <li>space-evenly</li>
+                </ol>
             </div>
+
             <div class="card">
                 <h3>Align Items</h3>
+                <p>Similar to Justify Content <b>but</b> works along the <b>cross-axis</b>.</p>
+                <ol>
+                    <li>flex-start</li>
+                    <li>flex-end</li>
+                    <li>center</li>
+                    <li>stretch</li>
+                    <li>baseline</li>
+                </ol>
             </div>
+
             <div class="card">
                 <h3>Centering Content</h3>
+                <p>Uses both <b>center</b> from both justify-content <b>and</b> align-items.</p>
             </div>
+
             <div class="card">
                 <h3>Flex Direction</h3>
+                <p>Default is <b>row</b>.</p>
+                <p>Can alter to column or reverse both column and row.</p>
             </div>
+
             <div class="card">
                 <h3>Align Self</h3>
+                <p>Applied to the child element</p>
+                <ol>
+                    <li>flex-start</li>
+                    <li>flex-end</li>
+                    <li>center</li>
+                    <li>stretch</li>
+                    <li>baseline</li>
+                </ol>
             </div>
+
             <div class="card">
                 <h3>Nesting</h3>
+                <p>A child component can use different flex options for <b>its</b> children.</p>
+                <p>Nesting Example:</p>
+                <!-- #inside-card>.bubble*8 -->
+                <div id="inside-card">
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                </div>
             </div>
         </div>
         
